// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform-named-imports aliased named import: aliased named import 1`] = `
"
import { myFunc as myAliasFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myAliasFunc from \\"./tests/testmodule/myFunc.js\\";
"
`;

exports[`transform-named-imports aliased namespace import: aliased namespace import 1`] = `
"
import { thangs } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as thangs from \\"./tests/testmodule/constants.js\\";
"
`;

exports[`transform-named-imports common js default import: common js default import 1`] = `
"
import React from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from './commonjsmodule';
"
`;

exports[`transform-named-imports common js default with named import: common js default with named import 1`] = `
"
import React, { Component } from './commonjsmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from './commonjsmodule';
"
`;

exports[`transform-named-imports default import with multiple named import: default import with multiple named import 1`] = `
"
import init, { myFunc, myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import init from \\"./tests/testmodule/index.js\\";
import myFunc from \\"./tests/testmodule/myFunc.js\\";
import { myOtherFunc } from \\"./tests/testmodule/myOtherFunc.js\\";
"
`;

exports[`transform-named-imports default import: default import 1`] = `
"
import myFunc from 'testmodule/myFunc'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from 'testmodule/myFunc';
"
`;

exports[`transform-named-imports glob import: glob import 1`] = `
"
import * as testmodule from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import * as testmodule from 'testmodule';
"
`;

exports[`transform-named-imports import export in single line: import export in single line 1`] = `
"
import { myInlineExport } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myInlineFunc as myInlineExport } from \\"./tests/testmodule/myOtherFunc.js\\";
"
`;

exports[`transform-named-imports multiple named imports: multiple named imports 1`] = `
"
import { myFunc, myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from \\"./tests/testmodule/myFunc.js\\";
import { myOtherFunc } from \\"./tests/testmodule/myOtherFunc.js\\";
"
`;

exports[`transform-named-imports nested named import: nested named import 1`] = `
"
import { myOtherFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import { myOtherFunc } from \\"./tests/testmodule/myOtherFunc.js\\";
"
`;

exports[`transform-named-imports single named import: single named import 1`] = `
"
import { myFunc } from 'testmodule'

      ↓ ↓ ↓ ↓ ↓ ↓

import myFunc from \\"./tests/testmodule/myFunc.js\\";
"
`;

exports[`transform-named-imports unresolved default import with named import: unresolved default import with named import 1`] = `
"
import React, { Component } from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React, { Component } from 'reacty';
"
`;

exports[`transform-named-imports unresolved default import: unresolved default import 1`] = `
"
import React from 'reacty'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from 'reacty';
"
`;
